--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/한라산.jpg");
+  background: url("../img/background2.jpg");
   background-size: cover;
 
 }
